[package]
name = "xsettings"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "Rust bindings to the XSETTINGS client library"
keywords = ["x11", "xsettings"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/pcwalton/rust-xsettings"
repository = "https://github.com/pcwalton/rust-xsettings"

[lib]
name = "xsettings"
path = "lib.rs"

[[example]]
name = "read-scale"
path = "read-scale.rs"

[dependencies]
libc = "0.2"

[dependencies.x11]
version = "2.3"
features = ["xlib"]

